public/style.css
body,
html {
  margin: 0;
  padding: 0;
}

html {
  background-color: #303030;
  font-size: 18px;
  font-family: 'Raleway', sans-serif;
}

.header i,
.tally-num i,
.overlay-content button,
.color,
.fa-info-circle {
  cursor: pointer;
}

.header {
  max-width: 200px;
  margin: 0 auto;
  text-align: center;
  color: #ffffff;
  font-size: 3rem;
}

.header h1,
.header i {
  display: inline-block;
}

/*/////////////////////////////////
          tally styles
/////////////////////////////////*/

.container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  max-width: 560px;
  margin: 0 auto;
  padding: 0 20px;
}

.tally {
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
  width: 110px;
  height: 110px;
  border-radius: 5px;
  margin-bottom: 15px;
  padding: 10px;
  text-align: center;
}

.tally h2 {
  font-size: 0.9rem;
  margin: 0;
}

.tally-num {
  font-size: 2rem;
}

.tally-num i {
  font-size: 1.5rem;
}

.fa-info-circle {
  position: absolute;
  top: 2px;
  right: 2px;
  color: rgba(0, 0, 0, 0.80);
}

.info {
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: absolute;
  padding: 0 10px;
  width: 80px;
  height: 50px;
  background-color: inherit;
  top: -55px;
  left: 15px;
  border-radius: 5px;
  transition: left 0.6s;
}

/*/////////////////////////////////
          overlay styles
/////////////////////////////////*/

.overlay-container {
  display: flex;
  align-items: center;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.80);
  position: fixed;
  z-index: 1;
}

.overlay-content {
  display: flex;
  align-items: center;
  flex-direction: column;
  flex-basis: 500px;
  position: relative;
  padding:  40px 0;
  margin: 0 auto;
  background-color: #ffffff;
  border-radius: 5px;
  text-align: center;
}

.overlay-content h1 {
  margin: 0 0 20px 0;
  line-height: 20px;
}

.overlay-content h2 {
  font-size: 3rem;
  margin: 0;
}

.overlay-content button {
  border: none;
  outline: none;
  border-radius: 2px;
  padding: 5px;
  background-color: black;
  color: white;
}

.close {
  font-size: 1.5rem;
  position: absolute;
  top: 2px;
}

/*/////////////////////////////////
          timer styles
/////////////////////////////////*/

.timer-buttons i {
  font-size: 2rem;
  margin-right: 10px;
}

.timer-buttons {
  margin-top: 20px;
}

/*/////////////////////////////////
          add/edit styles
/////////////////////////////////*/

.task-options {
  width: 90%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
}

.task-options span {
  font-weight: bold;
}

.task {
  width: 90%;
  margin-bottom: 20px;
  outline: none;
}

.colors {
  display: flex;
  flex-wrap: wrap;
  width: 50%;
  margin-top: 5px;
}

.color {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  margin: 0 5px 5px 0;
}

/*/////////////////////////////////
           data styles
/////////////////////////////////*/
.data-options {
  margin: 20px 0;
}

.graph {
  width: 70%;
  padding-bottom: 70%;
  background-color: red;
  margin-top: 20px;
}

/*/////////////////////////////////
          light theme
/////////////////////////////////*/
/*html {
  background-color: #ffffff;
  color: #ffffff;
}

.header {
  color: #000000;
}

.fa-info-circle {
  position: absolute;
  top: 2px;
  right: 2px;
  color: rgba(255, 255, 255, 0.80);
}*/

/*/////////////////////////////////
          tally colors
/////////////////////////////////*/
.color-white {background-color: #FAFAFA;}
.color-red {background-color: #e63030;}
.color-yellow {background-color: #e3bf30;}
.color-green {background-color: #b0e330;}
.color-seafoam {background-color: #5afaa2;}
.color-lightblue{background-color: #57f0f2;}
.color-blue {background-color: #5877f5;}
.color-purple {background-color: #9d57f2;}
.color-pink{background-color: #db58f5;}
.color-darkpink {background-color: #de45a6;}


/*/////////////////////////////////
           Media Queries
/////////////////////////////////*/
@media (min-width: 750px) {
  .info {
    left: 120px;
  }
}

@media (min-width: 540px) {
  .close {
    left: 465px;
  }

  .container {
    justify-content: space-between;
  }
}

